UX: ensures statutes are correctly aligned

--- a/assets/stylesheets/common/discourse-post-event-invitees.scss
+++ b/assets/stylesheets/common/discourse-post-event-invitees.scss
@@ -28,7 +28,8 @@
       }
 
       .status {
-        margin-left: 1em;
+        margin-left: auto;
+        margin-right: 0.5em;
 
         &.going {
           color: var(--success, $success);
